--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 					<header id="header">
 						<img src="img/logo_woon20.png" alt="WOON 2.0" style="width:256px;height:256px;">
 						<h1>Woon, el juego en tus manos.</h1>
-						<h2>Septiembre 2022</h2>
+						<p>Septiembre 2022</p>
 						<nav>
 							<ul>
-								<li><a href="https://tiwtter.com/woon" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/woonmx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="mailto:hola@woon.com.mx" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
