--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header">
 						<img src="img/logo_woon20.png" alt="WOON 2.0" style="width:256px;height:256px;">
 						<h1>Woon, el juego en tus manos.</h1>
-						<p>Septiembre 2022</p>
+						<p style="background-color:rgb(218, 253, 19);">Nos vemos en Septiembre 2022</p>
 						<nav>
 							<ul>
 								<li><a href="https://twitter.com/woonmx" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
